--- a/A2/app/src/main/res/layout/activity_main.xml
+++ b/A2/app/src/main/res/layout/activity_main.xml
@@ -11,10 +11,19 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/wallet"
-        android:textSize="30sp"
-        android:paddingVertical="5dp"
         android:textColor="#000000"
+        android:textSize="30sp"
         android:textStyle="bold" />
+
+    <TextView
+        android:id="@+id/error_message"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingVertical="5dp"
+        android:textColor="#FF0000"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        android:visibility="gone" />
 
     <LinearLayout
         android:layout_width="match_parent"
