--- a/A2/app/src/main/res/layout/activity_list_of_purchases.xml
+++ b/A2/app/src/main/res/layout/activity_list_of_purchases.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginVertical="5dp"
     android:orientation="vertical"
     android:paddingHorizontal="10dp"
     tools:context=".ListOfPurchasesActivity">
@@ -10,6 +11,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:paddingVertical="10dp"
         android:text="@string/list_of_purchases"
         android:textColor="#000000"
         android:textSize="30sp"
