--- a/A2/app/src/main/res/layout/purchase_row_layout.xml
+++ b/A2/app/src/main/res/layout/purchase_row_layout.xml
@@ -9,13 +9,17 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Store Name"
+        android:textColor="@color/black"
+        android:textSize="20sp"
         android:textStyle="bold" />
 
     <TextView
         android:id="@+id/purchaseAmount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Purchase Amount"
+        android:text="Purchase Amount: $100"
+        android:textColor="@color/black"
+        android:textSize="15sp"
         android:textStyle="bold" />
 
     <TextView
@@ -23,5 +27,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Paid Status"
+        android:textColor="@color/black"
+        android:textSize="15sp"
         android:textStyle="bold" />
 </LinearLayout>
