Added the Pokemon details screen and passing the index of the selected Pokemon to the second screen, added the handler to redirect the user to the Pokemon details screen

--- a/T1-hien-hnguyen110/app/src/main/res/layout/activity_main.xml
+++ b/T1-hien-hnguyen110/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:layout_marginVertical="5dp"
     android:orientation="vertical"
     android:paddingHorizontal="10dp"
-    tools:context=".MainActivity">
+    tools:context=".views.MainActivity">
 
     <ListView
         android:id="@+id/pokemonList"
