--- a/T1-hien-hnguyen110/app/src/main/res/layout/pokemon_row_layout.xml
+++ b/T1-hien-hnguyen110/app/src/main/res/layout/pokemon_row_layout.xml
@@ -2,9 +2,11 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:paddingHorizontal="10dp">
 
     <TextView
+        android:paddingVertical="5dp"
         android:id="@+id/name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -13,10 +15,11 @@
         android:textStyle="bold" />
 
     <TextView
+        android:paddingBottom="5dp"
         android:id="@+id/winLossRecord"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="@color/black"
-        android:textSize="15sp"
+        android:textSize="16sp"
         android:textStyle="bold" />
 </LinearLayout>
