--- a/A3/app/src/main/res/layout/activity_main.xml
+++ b/A3/app/src/main/res/layout/activity_main.xml
@@ -19,13 +19,16 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/results"
-        android:layout_width="409dp"
-        android:layout_height="583dp"
-        android:layout_marginStart="4dp"
-        android:layout_marginEnd="4dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/itemName"
+        tools:listitem="@layout/equipment_row" />
 
     <EditText
         android:id="@+id/itemName"
