--- a/Movies-hien-hnguyen110/app/src/main/res/layout/now_playing_fragment.xml
+++ b/Movies-hien-hnguyen110/app/src/main/res/layout/now_playing_fragment.xml
@@ -5,10 +5,9 @@
     android:layout_height="match_parent"
     tools:context=".fragments.NowPlayingFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/movies"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
-
+        tools:listitem="@layout/movie_row" />
 </FrameLayout>
