--- a/Movies-hien-hnguyen110/app/src/main/res/layout/movie_row.xml
+++ b/Movies-hien-hnguyen110/app/src/main/res/layout/movie_row.xml
@@ -89,7 +89,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView" />
 
     <Button
-        android:id="@+id/searchButton"
+        android:id="@+id/purchaseButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginVertical="16dp"
