--- a/Movies-hien-hnguyen110/app/src/main/res/layout/tickets_fragment.xml
+++ b/Movies-hien-hnguyen110/app/src/main/res/layout/tickets_fragment.xml
@@ -17,14 +17,14 @@
             android:padding="8dp"
             android:text="@string/tickets_fragment_label"
             android:textColor="@color/black"
-            android:textSize="28sp"
+            android:textSize="24sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/movies"
+            android:id="@+id/purchases"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             app:layout_constraintEnd_toEndOf="parent"
